--- a/css/style.css
+++ b/css/style.css
@@ -619,7 +619,7 @@
   color: var(--primary);
 }
 /* TimRoi */
-@-webkit-keyframes snowflakes-fall {
+/* @-webkit-keyframes snowflakes-fall {
   0% {
     top: -10%;
   }
@@ -738,7 +738,7 @@
   left: 65%;
   -webkit-animation-delay: 4s, 2.5s;
   animation-delay: 4s, 2.5s;
-}
+} */
 
 /* My CSS */
 .font-wedding {
