--- a/css/style.css
+++ b/css/style.css
@@ -1128,34 +1128,23 @@ input[type="file"] {
   background-color: #ab7442;
 }
 
-.demngay{
+.demngay {
   position: relative;
-  animation: phonering-alo-circle-fill-anim 2.3s infinite ease-in-out;
-  transition: all 0.5s;
-  -ms-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
 }
 
-.img-tim{
-  position: absolute;
-  left: -50px;
-  top: 100px;
-  transform: translateY(-50%);
-}
-
-#ngay-yeu{
-  position: absolute;
-  left: 70px;
-  top: 110px;
-  transform: translateY(-50%);
-  color: #ffffff;
+#ngay-yeu {
+  background-image: url(../img/luoitt.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #e02a4e;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
   font-size: 40px;
   text-shadow: 2px 2px 4px #000000;
 }
 
-.cauchuyenty{
+.cauchuyenty {
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
   font-weight: 300;
